# uniexplorers-public

./: .gitignore  README.md
backend/: README.md  docker-compose.yml  local-docker-compose.yml  makefile
backend/k8s/: README.md  makefile  server-env-configmap.yaml
backend/k8s/auth-server/: auth-env-configmap.yaml  auth-server-pod.yaml  auth-server-service.yaml
backend/k8s/broker/: broker-deployment.yaml  broker-service.yaml
backend/k8s/cache/: cache-deployment.yaml  cache-service.yaml
backend/k8s/chat-server/: chat-server-pod.yaml  chat-server-service.yaml
backend/k8s/forum-db/: forum-db-deployment.yaml  forum-db-service.yaml  forum-pg-data-persistentvolumeclaim.yaml  forum_db-env-configmap.yaml
backend/k8s/forum-server/: forum-server-pod.yaml  forum-server-service.yaml
backend/k8s/frontend/: uniexplorers-frontend-env.yaml  uniexplorers-frontend-pod.yaml  uniexplorers-frontend-service.yaml
backend/k8s/grafana/: grafana-service.yaml
backend/k8s/image-server/: image-server-pod.yaml  image-server-service.yaml  (+1 more)
backend/services/: auth.env  chat_db.env  java.env  mongo.env  notif.env  redis.env  scraper.env  server.env  telegram.env  urls.env  user_db.env
backend/services/servers/recommendation/: Cargo.toml  Dockerfile
backend/services/servers/recommendation/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs  util.rs
backend/util/: process_json.py  process_tags.py
frontend/: Dockerfile  docker-compose.yaml  entrypoint.sh  index.html  jsconfig.json  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
(+236 files in other folders)
